test cases resovled

--- a/templates/new_door/Update_Category_Type.html
+++ b/templates/new_door/Update_Category_Type.html
@@ -5,7 +5,7 @@
       <br />
       <div class="row">
         <div class="col-md-12">
-          <h4 class="alert alert-info">Update Category Type</h4>
+          <h4 class="alert alert-info">Category Type</h4>
           <form id="TypeValidation" class="form-horizontal" method="post" novalidate="novalidate">
             {% csrf_token %}
             <div class="card-body">
