--- a/templates/new_door/update_contract_request.html
+++ b/templates/new_door/update_contract_request.html
@@ -4,7 +4,7 @@
     <br />
     <div class="row">
       <div class="col-sm-12">
-        <h4 class="alert alert-info">Update Contract Request Type</h4>
+        <h4 class="alert alert-info">Contract Request Type</h4>
         <form
           id="TypeValidation"
           class="form-horizontal"
