--- a/templates/new_door/update_property.html
+++ b/templates/new_door/update_property.html
@@ -4,7 +4,7 @@
     <br />
     <div class="row">
       <div class="col-sm-12 offset-0">
-        <h4 class="alert alert-info">Update Property</h4>
+        <h4 class="alert alert-info">Property</h4>
         <!-- Changed by patrick 26.11.20 -->
         <form
           id="TypeValidation"
@@ -106,7 +106,7 @@
                   class="btn btn-info btn-round float-right"
                   style="margin-bottom: 20px; margin-top: 20px"
                 >
-                  Close
+                  Back
                 </a>
               </div>
             </div>
