--- a/templates/new_door/update_unit.html
+++ b/templates/new_door/update_unit.html
@@ -13,7 +13,7 @@
       <br />
       <div class="row">
         <div class="col-sm-12 offset-0">
-          <h4 class="alert alert-info">Update Unit</h4>
+          <h4 class="alert alert-info">Unit</h4>
           <form
             id="TypeValidation"
             class="form-horizontal"
