--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -73,14 +73,17 @@
       </div>
     </div>
     <div class="card">
-      <div class="card-header card-header-primary card-header-icon">
-        <div class="card-icon" style="padding-left: 1px">
+      <div
+        class="card-header card-header-icon"
+        
+      >
+        <div class="card-icon"style="padding: 0.8em 0; font-size: 1rem; background: rgb(224, 79, 115)">
           <a
-            href="  "
-            class="card-header card-header-rose card-header-text"
+            href=""
+            class="card-header card-header-text"
             style="font-size: 20px"
           >
-            <i class="material-icons">roofing</i> Property Overview
+            <i class="material-icons">roofing</i> {{ entity }}
           </a>
         </div>
         <div
@@ -114,7 +117,6 @@
             <thead>
               <tr>
                 <th>Owner Name</th>
-                <th>Entity Name</th>
                 <th>Property Name</th>
                 <th>Address</th>
                 <th>City</th>
@@ -127,7 +129,6 @@
               {% if properties %} {% for property in properties %}
               <tr>
                 <td>{{property.owner_name}}</td>
-                <td>{{property.entity.entity_name}}</td>
                 <td>{{property.property_name}}</td>
                 <td>{{property.address1}}</td>
                 <td>{{property.city}}</td>
@@ -136,7 +137,13 @@
                   <div
                     class="progress progress-line-primary"
                     title="{{ number_of_vacant_units }} / {{ number_of_units}} Vacant"
-                    style="margin: 0;width: 100%; height: 10px; border-radius: 30px; background:rgb(8, 158, 8)"
+                    style="
+                      margin: 0;
+                      width: 100%;
+                      height: 10px;
+                      border-radius: 30px;
+                      background: rgb(8, 158, 8);
+                    "
                   >
                     <div
                       class="progress-bar progress-bar-danger"
@@ -154,8 +161,9 @@
                 <td class="text-right">
                   <a
                     href=" {% url 'property_unit_overview' property.pk %} "
-                    class="d-inline" title="View units"
-                    >
+                    class="d-inline"
+                    title="View units"
+                  >
                     <div class="ripple-container success"></div>
                     <i
                       class="material-icons"
@@ -170,7 +178,6 @@
                   </a>
 
                   <a href="" class="d-inline" title="View location">
-                    
                     <i
                       class="material-icons"
                       style="
@@ -189,8 +196,8 @@
                     class="d-inline"
                     rel="tooltip "
                     data-original-title="Remove"
-                     title="View property"
-                    >
+                    title="View property"
+                  >
                     <div class="ripple-container success"></div>
                     <i
                       class="material-icons"
@@ -206,9 +213,9 @@
 
                   <a
                     href="{% url 'update_property' property.pk  %}"
-                   title="Update property"
+                    title="Update property"
                     class="d-inline"
-                    >
+                  >
                     <div class="ripple-container success"></div>
                     <i
                       class="material-icons"
@@ -227,7 +234,6 @@
                     title="Delete property"
                     class="d-inline"
                   >
-                    
                     <i
                       class="material-icons"
                       style="
