--- a/templates/new_door/update_documents_type.html
+++ b/templates/new_door/update_documents_type.html
@@ -13,7 +13,7 @@
       <br />
       <div class="row">
         <div class="col-md-12">
-          <h4 class="alert alert-info">Update Documents Type</h4>
+          <h4 class="alert alert-info">Documents Type</h4>
           <form action="" method="post">
             {% csrf_token %}
             <div class="card-body">
