--- a/templates/new_door/update_entity.html
+++ b/templates/new_door/update_entity.html
@@ -4,7 +4,7 @@
     <br />
     <div class="row">
       <div class="col-sm-12 offset-0">
-        <h4 class="alert alert-info">Update Entity</h4>
+        <h4 class="alert alert-info">Entity</h4>
         <form
           id="TypeValidation"
           class="form-horizontal"
