--- a/templates/new_door/update_ownership_type.html
+++ b/templates/new_door/update_ownership_type.html
@@ -5,7 +5,7 @@
     <br />
     <div class="row">
       <div class="col-md-12">
-        <h4 class="alert alert-info">Update Ownership Type</h4>
+        <h4 class="alert alert-info">Ownership Type</h4>
         <form id="TypeValidation"class="form-horizontal" action=" " method="post"novalidate="novalidate" >
           {% csrf_token %}
           <div class="card-body">
