--- a/templates/new_door/update_tenant_request.html
+++ b/templates/new_door/update_tenant_request.html
@@ -13,7 +13,7 @@
       <br />
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="alert alert-info">Update Tenant Request Type</h4>
+          <h4 class="alert alert-info">Tenant Request Type</h4>
           <form action="" method="post">
             {% csrf_token %}
             <div class="card-body">
