--- a/templates/new_door/upload_documents.html
+++ b/templates/new_door/upload_documents.html
@@ -17,7 +17,7 @@
       >
         <div class="card-text" style="padding-left: 1px">
           <a href="" class="card-header card-header-rose card-header-text">
-            <i class="material-icons">cloud_upload</i> Upload Documents
+            <i class="material-icons">cloud_upload</i>Documents
           </a>
         </div>
       </div>
