--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -86,7 +86,7 @@
       </div>
       <div
         class="card-icon float-right"
-        style="padding: 0.5em 0; font-size: 1rem; "
+        style="padding: 0.5em 0; font-size: 1rem"
       >
         <a
           href=" {% url 'add_unit' %} "
@@ -133,31 +133,30 @@
                 >
                   {{ unit.occupancy_type.occupancy_type }}
                 </a>
-                
-                {% elif unit.occupancy_type.occupancy_type.lower == 'document pending' %} 
-                  {% if unit.tenantcontract.tenant.uploaddocument_set.all.count > 0 %}
-                  
-                  <a
-                    href="{% url 'verify_documents' unit.tenantcontract.tenant.user.username %}"
-                    class="btn btn-primary btn-round occupancy_type"
-                  >
-                    {{ unit.occupancy_type.occupancy_type }}
-                  </a>
-                  {% else %}
-                  <button
-                    class="btn btn-primary btn-round occupancy_type"
-                  disabled>
-                    {{ unit.occupancy_type.occupancy_type }}
-                  </button>
-                  {% endif %}
 
-                {% elif unit.occupancy_type.occupancy_type.lower == 'create contract' %}
-                    <a
-                    href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
-                    class="btn btn-primary btn-round occupancy_type"
-                  >
-                    {{ unit.occupancy_type.occupancy_type }}
-                  </a>
+                {% elif unit.occupancy_type.occupancy_type.lower == 'document pending' %} 
+                {% if unit.tenantcontract.tenant.uploaddocument_set.all.count > 0 %}
+
+                <a
+                  href="{% url 'verify_documents' unit.tenantcontract.tenant.user.username %}"
+                  class="btn btn-primary btn-round occupancy_type"
+                >
+                  {{ unit.occupancy_type.occupancy_type }}
+                </a>
+                {% else %}
+                <button
+                  class="btn btn-primary btn-round occupancy_type"
+                  disabled
+                >
+                  {{ unit.occupancy_type.occupancy_type }}
+                </button>
+                {% endif %} {% elif unit.occupancy_type.occupancy_type.lower == 'create contract' %}
+                <a
+                  href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
+                  class="btn btn-primary btn-round occupancy_type"
+                >
+                  {{ unit.occupancy_type.occupancy_type }}
+                </a>
                 {% else %}
                 <button
                   class="btn btn-primary btn-round occupancy_type"
@@ -168,9 +167,14 @@
                 {% endif %}
               </td>
               <td>{{ unit.tenantcontract.tenant.user.username.capitalize }}</td>
-              <td>${{ unit.rent_amount|intcomma }}</td>
-              <td>{{ unit.size }}</td>
-              <td>{{ unit.size }}</td>
+              <td id="unit_amount">${{ unit.rent_amount }}</td>
+              <td id="collected_amount">{% if unit.tenantcontract.payment_set.all %}
+                {% for collected_amount in unit.tenantcontract.payment_set.all %}
+                  ${{ collected_amount }}
+                {% endfor %}
+                {% endif %}
+               </td>
+              <td id="amount_due"></td>
 
               <td class="text-right">
                 <a href="#" class="d-inline" title="Renewal">
@@ -316,6 +320,21 @@
           break;
       }
     });
+  }
+  calDueAmount()
+
+  function calDueAmount() {
+    const unitAmount = document.getElementById("unit_amount").textContent.replace('$','');
+    const amountDue = document.getElementById("amount_due");
+    const collectedAmount = document.getElementById("collected_amount").textContent.replace('$','');
+    const amountPaid = parseInt(collectedAmount)
+
+    // document.addEventListener("DOMContentLoaded", () => {
+      
+      if (unitAmount !== "" ) {
+        amountDue.textContent += parseInt(unitAmount) - amountPaid ;
+      }
+    // });
   }
 </script>
 {% endblock %}
