--- a/templates/new_door/dashboard.html
+++ b/templates/new_door/dashboard.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% block title %} Dashboard {% endblock title %} 
-{% block body %}
+{% extends 'base.html' %} {% block title %} Dashboard {% endblock title %} {% block body %}
 
 <div class="row">
   <div class="col-lg-3 col-md-6 col-sm-6">
@@ -477,7 +476,134 @@
             </div> -->
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-8">
+    <div class="card">
+      <div class="card-header card-header-warning card-header-icon">
+        <div class="card-icon">
+          <i class="material-icons" style="width: initial">account_balance</i>
+        </div>
+        <h4 class="card-title">Property Status</h4>
+      </div>
+      <div class="card-body">
+        <div class="toolbar">
+          <!--        Here you can write extra buttons/actions for the toolbar              -->
+        </div>
+        <div class="material-datatables">
+          <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+            <div class="row">
+              <div class="col-sm-12">
+                <table
+                  id="datatables"
+                  class="table table-striped table-no-bordered table-hover dataTable dtr-inline"
+                  cellspacing="0"
+                  width="100%"
+                  style="width: 100%"
+                  role="grid"
+                  aria-describedby="datatables_info"
+                >
+                  <thead>
+                    <tr role="row">
+                      <th
+                        class="sorting_asc"
+                        tabindex="0"
+                        aria-controls="datatables"
+                        rowspan="1"
+                        colspan="1"
+                        style="width: 135px"
+                        aria-sort="ascending"
+                        aria-label="Name: activate to sort column descending"
+                      >
+                        Property Name
+                      </th>
+                      <th
+                      class="sorting"
+                      tabindex="0"
+                      aria-controls="datatables"
+                      rowspan="1"
+                      colspan="1"
+                      style="width: 77px"
+                      aria-label="Age: activate to sort column ascending"
+                    >
+                      Units
+                    </th>
+                      <th
+                        class="sorting"
+                        tabindex="0"
+                        aria-controls="datatables"
+                        rowspan="1"
+                        colspan="1"
+                        style="width: 108px"
+                        aria-label="Position: activate to sort column ascending"
+                      >
+                        Doc pending
+                      </th>
+                      <th
+                        class="sorting"
+                        tabindex="0"
+                        aria-controls="datatables"
+                        rowspan="1"
+                        colspan="1"
+                        style="width: 152px"
+                        aria-label="Office: activate to sort column ascending"
+                      >
+                        Create Contract
+                      </th>
+                  
+                      <th
+                        class=" sorting"
+                        tabindex="0"
+                        aria-controls="datatables"
+                        rowspan="1"
+                        colspan="1"
+                        style="width: 70px"
+                        aria-label="Actions: activate to sort column ascending"
+                      >
+                        Vacant
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr role="row" class="odd">
+                      <th tabindex="0" class="sorting_1">Building 1</th>
+                      <td>10</td>
+                      <td>2</td>
+                      <td>5</td>
+                      <td>3</td>
+                    </tr>
+                    <tr role="row" class="odd">
+                      <th tabindex="0" class="sorting_1">Building 2</th>
+                      <td>10</td>
+                      <td>2</td>
+                      <td>5</td>
+                      <td>3</td>
+                    </tr>
+                    <tr role="row" class="odd">
+                      <th tabindex="0" class="sorting_1">Building 3</th>
+                      <td>10</td>
+                      <td>2</td>
+                      <td>5</td>
+                      <td>3</td>
+                    </tr>
+                    <tr role="row" class="odd">
+                      <th tabindex="0" class="sorting_1">Building 4</th>
+                      <td>10</td>
+                      <td>2</td>
+                      <td>5</td>
+                      <td>3</td>
+                    </tr>
+               
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end content-->
+    </div>
+    <!--  end card  -->
+  </div>
+  <!-- <div class="col-md-4">
     <div class="card card-chart" data-count="1">
       <div class="card-header card-header-success" data-header-animation="true">
         <div class="ct-chart" id="dailySalesChart">
@@ -848,14 +974,10 @@
           increase in today sales.
         </p>
       </div>
-      <!-- <div class="card-footer">
-                <div class="stats">
-                    <i class="material-icons">access_time</i> updated 4 minutes ago
-                </div>
-            </div> -->
+
     </div>
-  </div>
-  <div class="col-md-4">
+  </div> -->
+  <!-- <div class="col-md-4">
     <div class="card card-chart">
       <div class="card-header card-header-info" data-header-animation="true">
         <div class="ct-chart" id="completedTasksChart">
@@ -1249,20 +1371,15 @@
         <h4 class="card-title">Completed Tasks</h4>
         <p class="card-category">Last Campaign Performance</p>
       </div>
-      <!-- <div class="card-footer">
-                <div class="stats">
-                    <i class="material-icons">access_time</i> campaign sent 2 days ago
-                </div>
-            </div> -->
     </div>
-  </div>
+  </div> -->
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-8">
     <div class="card">
       <div class="card-header card-header-primary card-header-icon">
         <div class="card-icon">
-          <i class="material-icons">assignment</i>
+          <i class="material-icons" style="width: initial">account_balance</i>
         </div>
         <h4 class="card-title">Latest 10 Paid Invoices</h4>
       </div>
@@ -1303,7 +1420,7 @@
                         aria-controls="datatables"
                         rowspan="1"
                         colspan="1"
-                        style="width: 258px"
+                        style="width: 178px"
                         aria-label="Position: activate to sort column ascending"
                       >
                         Position
@@ -1325,7 +1442,7 @@
                         aria-controls="datatables"
                         rowspan="1"
                         colspan="1"
-                        style="width: 47px"
+                        style="width: 77px"
                         aria-label="Age: activate to sort column ascending"
                       >
                         Age
@@ -1384,6 +1501,38 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- end content-->
+    </div>
+    <!--  end card  -->
+  </div>
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-header card-header-danger card-header-icon">
+        <div class="card-icon">
+          <i class="material-icons" style="width: initial">assignment</i>
+        </div>
+        <h4 class="card-title">Notification</h4>
+      </div>
+      <div class="card-body">
+        <div class="mgs d-flex mt-2">
+          <i class="material-icons pr-2 text-danger"> feedback </i>
+          <a href="" class="link text-danger"
+            >Patrick has made a Payment go ahead and generate a contract
+          </a>
+        </div>
+        <div class="mgs d-flex mt-2">
+          <i class="material-icons pr-2 text-danger"> feedback </i>
+          <a href="" class="link text-danger"
+            >Patrick has made a Payment go ahead and generate a contract
+          </a>
+        </div>
+        <div class="mgs d-flex mt-2">
+          <i class="material-icons pr-2 text-danger"> feedback </i>
+          <a href="" class="link text-danger"
+            >Patrick has made a Payment go ahead and generate a contract
+          </a>
         </div>
       </div>
       <!-- end content-->
