--- a/templates/new_door/property_unit_overview.html
+++ b/templates/new_door/property_unit_overview.html
@@ -14,7 +14,7 @@
             <div class="card-icon">
               <i class="material-icons">account_balance_wallet</i>
             </div>
-            <h3 class="card-title">$514184</h3>
+            <h3 class="card-title">${{ collected_amount }}</h3>
             <br /><br />
             <p class="card-category">Total Earnings</p>
           </div>
@@ -31,7 +31,7 @@
             <div class="card-icon">
               <i class="material-icons">account_balance_wallet</i>
             </div>
-            <h3 class="card-title">$754875</h3>
+            <h3 class="card-title">${{ due_amount }}</h3>
             <br /><br />
             <p class="card-category">Total Dues Amount</p>
           </div>
@@ -108,155 +108,165 @@
           width="100%"
           style="width: 100%"
         >
-          <thead>
-            <tr>
-              <th>Unit No</th>
-              <th>Type</th>
-              <th>Occupancy</th>
-              <th>Tenant</th>
-              <th>Collected</th>
-              <th>Due Amount</th>
-              <th class="disabled-sorting text-right">Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% if units %} {% for unit in units %}
-            <tr>
-              <td>{{unit.id}}</td>
-              <td>{{unit.property_type.property_type}}</td>
-              <td>
-                {% if unit.occupancy_type.occupancy_type.lower == 'vacant' %}
-                <a
-                  href="{% url 'add_tenant_to_unit' unit.pk %}"
-                  class="btn btn-primary btn-round occupancy_type"
-                >
-                  {{ unit.occupancy_type.occupancy_type }}
-                </a>
-                
-                {% elif unit.occupancy_type.occupancy_type.lower == 'document pending' %} 
-                  {% if unit.tenantcontract.tenant.uploaddocument_set.all.count > 0 %}
-                  
-                  <a
-                    href="{% url 'verify_documents' unit.tenantcontract.tenant.user.username %}"
-                    class="btn btn-primary btn-round occupancy_type"
-                  >
-                    {{ unit.occupancy_type.occupancy_type }}
-                  </a>
-                  {% else %}
-                  <button
-                    class="btn btn-primary btn-round occupancy_type"
-                  disabled>
-                    {{ unit.occupancy_type.occupancy_type }}
-                  </button>
-                  {% endif %}
+        <thead>
+          <tr>
+            <th>Unit No</th>
+            <th>Type</th>
+            <th>Occupancy</th>
+            <th>Tenant</th>
+            <th>Rental Amount</th>
+            <th>Collected</th>
+            <th>Due Amount</th>
+            <th class="disabled-sorting text-right">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% if units %} {% for unit in units %}
+          <tr>
+            <td>{{unit.id}}</td>
+            <td>{{unit.property_type.property_type}}</td>
+            <td>
+              {% if unit.occupancy_type.occupancy_type.lower == 'vacant' %}
+              <a
+                href="{% url 'add_tenant_to_unit' unit.pk %}"
+                class="btn btn-primary btn-round occupancy_type"
+              >
+                {{ unit.occupancy_type.occupancy_type }}
+              </a>
 
-                {% elif unit.occupancy_type.occupancy_type.lower == 'create contract' %}
-                    <a
-                    href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
-                    class="btn btn-primary btn-round occupancy_type"
-                  >
-                    {{ unit.occupancy_type.occupancy_type }}
-                  </a>
-                {% else %}
-                <button
-                  class="btn btn-primary btn-round occupancy_type"
-                  disabled
-                >
-                  {{ unit.occupancy_type.occupancy_type }}
-                </button>
-                {% endif %}
-              </td>
-              <td>{{ unit.tenantcontract.tenant.user.username.capitalize }}</td>
-              <td>${{ unit.rent_amount|intcomma }}</td>
-              <td>{{ unit.size }}</td>
-              <td class="text-right">
-                <a href="#" class="d-inline" title="Renewal">
-                  <i
-                    class="material-icons"
-                    style="
-                      margin-right: 5px;
-                      margin-top: 10px;
-                      margin-bottom: 20px;
-                      color: #f44336;
-                    "
-                    >autorenew</i
-                  >
-                  <div class="ripple-container"></div>
-                </a>
+              {% elif unit.occupancy_type.occupancy_type.lower == 'document pending' %} 
+              {% if unit.tenantcontract.tenant.uploaddocument_set.all.count > 0 %}
 
-                <a href="#" class="d-inline" title="Maintenance">
-                  <i
-                    class="material-icons"
-                    style="
-                      margin-right: 5px;
-                      margin-top: 10px;
-                      margin-bottom: 20px;
-                      color: #6663ff;
-                    "
-                    >construction</i
-                  >
-                  <div class="ripple-container"></div>
-                </a>
+              <a
+                href="{% url 'verify_documents' unit.tenantcontract.tenant.user.username %}"
+                class="btn btn-primary btn-round occupancy_type"
+              >
+                {{ unit.occupancy_type.occupancy_type }}
+              </a>
+              {% else %}
+              <button
+                class="btn btn-primary btn-round occupancy_type"
+                disabled
+              >
+                {{ unit.occupancy_type.occupancy_type }}
+              </button>
+              {% endif %} {% elif unit.occupancy_type.occupancy_type.lower == 'create contract' %}
+              <a
+                href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
+                class="btn btn-primary btn-round occupancy_type"
+              >
+                {{ unit.occupancy_type.occupancy_type }}
+              </a>
+              {% else %}
+              <button
+                class="btn btn-primary btn-round occupancy_type"
+                disabled
+              >
+                {{ unit.occupancy_type.occupancy_type }}
+              </button>
+              {% endif %}
+            </td>
+            <td>{{ unit.tenantcontract.tenant.user.username.capitalize }}</td>
+            <td>${{ unit.rent_amount }}</td>
+            <td>
+              {% if unit.tenantcontract.payment_set.all %}
+                ${{ collected_amount }}
+              {% endif %}
+             </td>
+            <td>
+              {% if unit.tenantcontract.payment_set.all %}
+                ${{ remain_amount }}
+              {% endif %}
+            </td>
 
-                <a
-                  href="{% url 'view_unit' unit.pk  %}"
-                  class="d-inline"
-                  rel="tooltip "
-                  title="View unit"
-                  data-original-title="Remove "
+            <td class="text-right">
+              <a href="#" class="d-inline" title="Renewal">
+                <i
+                  class="material-icons"
+                  style="
+                    margin-right: 5px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    color: #f44336;
+                  "
+                  >autorenew</i
                 >
-                  <div class="ripple-container success"></div>
-                  <i
-                    class="material-icons"
-                    style="
-                      margin-right: 10px;
-                      margin-top: 10px;
-                      margin-bottom: 20px;
-                      color: #ff9800;
-                    "
-                    >dvr</i
-                  >
-                </a>
+                <div class="ripple-container"></div>
+              </a>
 
-                <a
-                  href="{% url 'update_unit' unit.pk %}"
-                  class="d-inline"
-                  title="Update unit"
+              <a href="#" class="d-inline" title="Maintenance">
+                <i
+                  class="material-icons"
+                  style="
+                    margin-right: 5px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    color: #6663ff;
+                  "
+                  >construction</i
                 >
-                  <div class="ripple-container success"></div>
-                  <i
-                    class="material-icons"
-                    style="
-                      margin-right: 5px;
-                      margin-top: 10px;
-                      margin-bottom: 20px;
-                      color: #4caf50;
-                    "
-                    >create</i
-                  >
-                </a>
+                <div class="ripple-container"></div>
+              </a>
 
-                <a
-                  href="{% url 'delete_unit' unit.pk %}"
-                  class="d-inline"
-                  title="Delete unit"
+              <a
+                href="{% url 'view_unit' unit.pk  %}"
+                class="d-inline"
+                rel="tooltip "
+                title="View unit"
+                data-original-title="Remove "
+              >
+                <div class="ripple-container success"></div>
+                <i
+                  class="material-icons"
+                  style="
+                    margin-right: 10px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    color: #ff9800;
+                  "
+                  >dvr</i
                 >
-                  <i
-                    class="material-icons"
-                    style="
-                      margin-right: 5px;
-                      margin-top: 10px;
-                      margin-bottom: 20px;
-                      color: #f44336;
-                    "
-                    >delete</i
-                  >
-                  <div class="ripple-container"></div>
-                </a>
-              </td>
-            </tr>
-            {% endfor %} {% else %} NoData {% endif %}
-          </tbody>
+              </a>
+
+              <a
+                href="{% url 'update_unit' unit.pk %}"
+                class="d-inline"
+                title="Update unit"
+              >
+                <div class="ripple-container success"></div>
+                <i
+                  class="material-icons"
+                  style="
+                    margin-right: 5px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    color: #4caf50;
+                  "
+                  >create</i
+                >
+              </a>
+
+              <a
+                href="{% url 'delete_unit' unit.pk %}"
+                class="d-inline"
+                title="Delete unit"
+              >
+                <i
+                  class="material-icons"
+                  style="
+                    margin-right: 5px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    color: #f44336;
+                  "
+                  >delete</i
+                >
+                <div class="ripple-container"></div>
+              </a>
+            </td>
+          </tr>
+          {% endfor %} {% else %} NoData {% endif %}
+        </tbody>
         </table>
       </div>
     </div>
@@ -265,15 +275,6 @@
   <!--  end card  -->
 </div>
 <!-- end row -->
-{% endblock %}
-{% block occupancy_type %}
-  <script>
-
-    const occupancyType = document.getElementById('occupancy_type')
-    console.log(occupancyType.textContent);
-
-
-  </script>
 {% endblock %}
 
 {% block occupancy %}
